--- a/ios/Podfile
+++ b/ios/Podfile
@@ -18,6 +18,8 @@ end
 
 target 'crypto' do
   config = use_native_modules!
+  use_frameworks! :linkage => :static
+  $RNFirebaseAsStaticFramework = true
 
   use_react_native!(
     :path => config[:reactNativePath],
