--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.cryptoinfoapp</string>
+	<string>com.crypotinfoapp</string>
 	<key>PROJECT_ID</key>
 	<string>cryptoinfo-2229c</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:578240969234:ios:e3901097f2cef8679f76cb</string>
+	<string>1:578240969234:ios:842ef72a07b4da1f9f76cb</string>
 </dict>
 </plist>
