--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-firebase/app": "^20.1.0",
+    "@react-native-firebase/firestore": "^20.1.0",
+    "@react-native-firebase/messaging": "^20.1.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -21,6 +24,7 @@
     "react-native": "0.74.2",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-mmkv": "^2.12.2",
+    "react-native-permissions": "^4.1.5",
     "react-native-reanimated": "^3.12.1",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.10.4",
