--- a/ios/Qwikto.xcodeproj/xcshareddata/xcschemes/crypto.xcscheme
+++ b/ios/Qwikto.xcodeproj/xcshareddata/xcschemes/crypto.xcscheme
@@ -16,7 +16,7 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
                BuildableName = "crypto.app"
-               BlueprintName = "crypto"
+               BlueprintName = "Qwikto"
                ReferencedContainer = "container:Qwikto.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -33,8 +33,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "cryptoTests.xctest"
-               BlueprintName = "cryptoTests"
+               BuildableName = "QwiktoTests.xctest"
+               BlueprintName = "QwiktoTests"
                ReferencedContainer = "container:Qwikto.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -56,7 +56,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "crypto.app"
-            BlueprintName = "crypto"
+            BlueprintName = "Qwikto"
             ReferencedContainer = "container:Qwikto.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -73,7 +73,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
             BuildableName = "crypto.app"
-            BlueprintName = "crypto"
+            BlueprintName = "Qwikto"
             ReferencedContainer = "container:Qwikto.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
